--- a/css/main.sass
+++ b/css/main.sass
@@ -57,13 +57,12 @@ p,
 ul
     +reset
 
-h2
+h2,
+p
     font-size: 1rem
 
-p,
 ul
     font-family: $secondary-font
-    font-size: 1rem
 
 // Container for split page
 .container
@@ -168,6 +167,7 @@ ul
                     border: 2px solid $primary-color
                     padding: 0.25rem 0.5rem
                     border-radius: 5px
+                    margin-bottom: .25rem
 
 // Mobile breakpoint style
 @media only screen and (max-width: 768px)
