--- a/css/main.css
+++ b/css/main.css
@@ -39,14 +39,13 @@ ul {
   padding: 0;
 }
 
-h2 {
+h2,
+p {
   font-size: 1rem;
 }
 
-p,
 ul {
   font-family: "Raleway", sans-serif;
-  font-size: 1rem;
 }
 
 .container {
@@ -224,6 +223,7 @@ ul {
   border: 2px solid #b80c09;
   padding: 0.25rem 0.5rem;
   border-radius: 5px;
+  margin-bottom: .25rem;
 }
 
 @media only screen and (max-width: 768px) {
