--- a/css/main.sass
+++ b/css/main.sass
@@ -1,8 +1,8 @@
 // Variables
-$primary-color: #b80c09
+$primary-color: #ff383B
 $secondary-color: #6b0806
 $text-color: #140101
-$background-color: #f8e5e5
+$background-color: #f8f8f8
 $hover-color: #ff9999
 $primary-font: "Roboto", sans-serif
 $secondary-font: "Raleway", sans-serif
