--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ li {
 }
 
 .container .left {
-  background-color: #b80c09;
+  background-color: #ff383B;
 }
 
 .container .left .infobox {
@@ -105,7 +105,7 @@ li {
 }
 
 .container .left .infobox a {
-  background-color: #f8e5e5;
+  background-color: #f8f8f8;
   padding: 0.25rem 1rem;
   border-radius: 3px;
   -webkit-transition: 1s;
@@ -140,7 +140,7 @@ li {
 }
 
 .container .right {
-  background-color: #f8e5e5;
+  background-color: #f8f8f8;
 }
 
 .container .right .about,
@@ -221,7 +221,7 @@ li {
 .container .right .technology ul li {
   list-style: none;
   display: inline-block;
-  border: 2px solid #b80c09;
+  border: 2px solid #ff383B;
   padding: 0.25rem 0.5rem;
   border-radius: 5px;
   margin-bottom: .25rem;
