--- a/css/main.sass
+++ b/css/main.sass
@@ -68,6 +68,7 @@ $secondary-font: "Lato", sans-serif
 @keyframes back-pulse
   50%
     background-color: $hover-color
+// Shoutout to Hover.css :)
 
 // Base Styles
 html,
@@ -77,7 +78,6 @@ body
 
     color: $text-color
     font-family: $primary-font
-    overflow: hidden
 
 a,
 ul,
@@ -114,7 +114,7 @@ h2
     // Left Half
     .left
         background-color: $primary-color
-
+        overflow: hidden
         .infobox
             +flex-column-nowrap
             +flex-center
