--- a/css/main.sass
+++ b/css/main.sass
@@ -154,8 +154,9 @@ h2
 
     // Right half
     .right
+        +flex-column-nowrap
+        +fullsize
         background-color: $background-color
-
         section
             display: flex
             padding: 0 4rem 1rem 4rem
@@ -186,7 +187,17 @@ h2
 
         .experience-item > p > span
             font-weight: 700
-
+        
+        .credits
+            margin-top: auto
+            padding: 0 .5rem .25rem 0
+            font-family: $secondary-font
+            font-size: 1rem
+            justify-content: flex-end
+            a:hover
+                span
+                    color: $primary-color
+                    transition: .25s
 
 // Mobile breakpoint style
 @media only screen and (max-width: 768px)
