--- a/css/main.sass
+++ b/css/main.sass
@@ -179,7 +179,7 @@ h3
 
             p,
             ul
-                flex-basis: 90%
+                flex-basis: 75%
                 text-align: start
 
             ul
@@ -234,18 +234,20 @@ h3
                     padding-top: 1rem
                 h1
                     font-size: 1.5rem
-                    padding: 0 .5rem 0 .5rem
+                    padding: 0 1rem
                     text-align: center
             nav
                 min-height: 7.5%
         
         .right
             section
-                padding: .5rem 1rem
+                padding: .5rem 2rem
                 ul,
                 p
                     flex-basis: 80%
                 h3
                     flex-basis: 20%
+            .skill>ul>li>span
+                padding-left: .75rem
             .misc
                 font-size: .75rem
