small design changes

--- a/css/main.sass
+++ b/css/main.sass
@@ -197,6 +197,7 @@ h3
 
         .about
             margin-top: 4rem
+            line-height: 1.5rem
 
         .experience-list
             +flex-column-nowrap
