--- a/css/main.css
+++ b/css/main.css
@@ -324,7 +324,7 @@ h3 {
         flex-basis: 20%;
   }
   .container .right .skill > ul > li > span {
-    padding-left: .75rem;
+    padding-left: 1.5rem;
   }
   .container .right .misc {
     font-size: .75rem;
