--- a/css/main.sass
+++ b/css/main.sass
@@ -249,6 +249,6 @@ h3
                 h3
                     flex-basis: 20%
             .skill>ul>li>span
-                padding-left: .75rem
+                padding-left: 1.5rem
             .misc
                 font-size: .75rem
