--- a/css/main.sass
+++ b/css/main.sass
@@ -148,6 +148,8 @@ h3
                 border-radius: 3px
                 background-color: $background-color
                 +hover-back-pulse
+        .wrapper
+            width: 26rem
 
         // Links to online profiles
         nav
@@ -176,6 +178,7 @@ h3
                 flex-basis: 10%
                 text-align: end
                 padding-top: .25rem
+                padding-right: 1rem
 
             p,
             ul
@@ -184,7 +187,6 @@ h3
 
             ul
                 list-style-type: none
-                padding-left: 1rem
                 li
                     font-weight: 800
                 i
@@ -192,12 +194,9 @@ h3
                     padding-bottom: .25rem
                     color: $accent-color
 
-            p
-                padding-left: .75rem
-
         .about
             margin-top: 4rem
-            line-height: 1.5rem
+            line-height: 1.5
 
         .experience-list
             +flex-column-nowrap
@@ -235,8 +234,10 @@ h3
                     padding-top: 1rem
                 h1
                     font-size: 1.5rem
-                    padding: 0 1rem
-                    text-align: center
+                    padding: 0 3.25rem
+                    text-align: start
+            .wrapper
+                padding: 0 1rem 0 1rem
             nav
                 min-height: 7.5%
         
@@ -248,7 +249,5 @@ h3
                     flex-basis: 80%
                 h3
                     flex-basis: 20%
-            .skill>ul>li>span
-                padding-left: 1.5rem
             .misc
                 font-size: .75rem
