--- a/css/main.sass
+++ b/css/main.sass
@@ -129,7 +129,7 @@ h3
             +flex-column-nowrap
             +flex-center
             //animation: fadein 2s
-            min-height: 95%
+            min-height: 94%
             width: 100%
 
             img
@@ -154,7 +154,7 @@ h3
         // Links to online profiles
         nav
             +flex-row-nowrap
-            min-height: 5%
+            min-height: 6%
             width: 100%
             justify-content: flex-end
             align-content: flex-end
@@ -243,7 +243,7 @@ h3
         
         .right
             section
-                padding: .5rem 2rem
+                padding: 0 1rem .5rem 1rem
                 ul,
                 p
                     flex-basis: 80%
@@ -251,3 +251,24 @@ h3
                     flex-basis: 20%
             .misc
                 font-size: .75rem
+@media only screen and (min-width: 1024px)
+    .container
+        .right
+            section
+                display: flex
+                padding: 0 2rem 1rem 2rem
+
+                h3
+                    flex-basis: 15%
+                    text-align: end
+                    padding-top: .25rem
+                    padding-right: 1rem
+
+                p,
+                ul
+                    flex-basis: 85%
+                    text-align: start
+
+                ul> li> i
+                        padding-bottom: .25rem
+                        padding-right: 1rem
