--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ h3 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  min-height: 94%;
+  min-height: 95%;
   width: 100%;
 }
 
@@ -156,7 +156,7 @@ h3 {
   -webkit-box-direction: normal;
       -ms-flex-flow: row nowrap;
           flex-flow: row nowrap;
-  min-height: 6%;
+  min-height: 5%;
   width: 100%;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -232,8 +232,6 @@ h3 {
 }
 
 .container .right section ul i {
-  padding-right: .5rem;
-  padding-bottom: .25rem;
   color: #B50C0F;
 }
 
@@ -270,7 +268,7 @@ h3 {
   margin-top: auto;
   padding: 0 1rem .5rem 1rem;
   font-family: "Lato", sans-serif;
-  font-size: 1rem;
+  font-size: 1.25rem;
 }
 
 .container .right .misc .misc-right:hover span {
@@ -326,6 +324,10 @@ h3 {
     -ms-flex-preferred-size: 20%;
         flex-basis: 20%;
   }
+  .container .right ul > li > i {
+    padding-bottom: .25rem;
+    padding-right: .5rem;
+  }
   .container .right .misc {
     font-size: .75rem;
   }
@@ -353,7 +355,7 @@ h3 {
   }
   .container .right section ul > li > i {
     padding-bottom: .25rem;
-    padding-right: 1rem;
+    padding-right: .5rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
