--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ h2 {
 
 h3 {
   font-size: 0.75rem;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .container {
@@ -99,7 +99,7 @@ h3 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  min-height: 95%;
+  min-height: 93%;
   width: 100%;
 }
 
@@ -156,7 +156,7 @@ h3 {
   -webkit-box-direction: normal;
       -ms-flex-flow: row nowrap;
           flex-flow: row nowrap;
-  min-height: 5%;
+  min-height: 7%;
   width: 100%;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -271,6 +271,26 @@ h3 {
   font-size: 1rem;
 }
 
+.container .right .misc .misc-left:hover {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+          transform: perspective(1px) translateZ(0);
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+}
+
+.container .right .misc .misc-left:hover:hover, .container .right .misc .misc-left:hover:focus, .container .right .misc .misc-left:hover:active {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
 .container .right .misc .misc-right:hover span {
   -webkit-transition: .25s;
   transition: .25s;
@@ -313,16 +333,27 @@ h3 {
     min-height: 6%;
   }
   .container .right section {
-    padding: 0 1rem .5rem 1rem;
+    padding: 0 .5rem .5rem .5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
   }
   .container .right section ul,
   .container .right section p {
     -ms-flex-preferred-size: 80%;
         flex-basis: 80%;
+    text-align: start;
   }
   .container .right section h3 {
     -ms-flex-preferred-size: 20%;
         flex-basis: 20%;
+    text-align: end;
+    padding-top: .25rem;
+    padding-right: .5rem;
   }
   .container .right ul > li > i {
     padding-bottom: .25rem;
