--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ h3 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  min-height: 93%;
+  min-height: 95%;
   width: 100%;
 }
 
@@ -156,7 +156,13 @@ h3 {
   -webkit-box-direction: normal;
       -ms-flex-flow: row nowrap;
           flex-flow: row nowrap;
-  min-height: 7%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 5%;
   width: 100%;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
