--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "San Francisco";
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+}
+
 @-webkit-keyframes back-pulse {
   50% {
     background-color: #ff9999;
@@ -17,14 +22,7 @@ body {
   height: 100%;
   width: 100%;
   color: #140101;
-  font-family: "Roboto", sans-serif;
-}
-
-a,
-ul,
-p,
-li {
-  font-family: "Lato", sans-serif;
+  font-family: "San Francisco", sans-serif;
 }
 
 a {
@@ -34,7 +32,6 @@ a {
 
 h1,
 h2,
-h3,
 p,
 ul {
   margin: 0;
@@ -43,16 +40,11 @@ ul {
 
 h1 {
   font-size: 2rem;
-  font-weight: 500;
 }
 
 h2 {
-  font-size: 1.25rem;
-}
-
-h3 {
-  font-size: 0.75rem;
-  font-weight: 600;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
 .container {
@@ -112,13 +104,14 @@ h3 {
 
 .container .left .infobox h1 {
   line-height: 2rem;
+  font-weight: 500;
 }
 
 .container .left .infobox a {
   font-weight: 700;
   margin-top: .5rem;
-  padding: 0.5rem 3rem;
-  border-radius: 3px;
+  padding: .5rem 3rem;
+  border-radius: .25rem;
   background-color: #f8f8f8;
   display: inline-block;
   vertical-align: middle;
@@ -162,13 +155,14 @@ h3 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  min-height: 5%;
-  width: 100%;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  -ms-flex-line-pack: end;
-      align-content: flex-end;
+  min-height: 5%;
+  width: 100%;
 }
 
 .container .left nav a {
@@ -193,6 +187,10 @@ h3 {
           transform: scale(1.2);
 }
 
+.container .left nav a:last-child {
+  padding-right: 2rem;
+}
+
 .container .right {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -210,22 +208,21 @@ h3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 0 4rem 1rem 4rem;
+  padding: 0 2rem 1rem 2rem;
 }
 
-.container .right section h3 {
+.container .right section h2 {
   color: #B50C0F;
-  -ms-flex-preferred-size: 10%;
-      flex-basis: 10%;
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
   text-align: end;
-  padding-top: .25rem;
   padding-right: 1rem;
 }
 
 .container .right section p,
 .container .right section ul {
-  -ms-flex-preferred-size: 75%;
-      flex-basis: 75%;
+  -ms-flex-preferred-size: 80%;
+      flex-basis: 80%;
   text-align: start;
 }
 
@@ -234,16 +231,17 @@ h3 {
 }
 
 .container .right section ul li {
-  font-weight: 800;
+  padding-bottom: .25rem;
 }
 
 .container .right section ul i {
   color: #B50C0F;
+  padding-right: .5rem;
 }
 
 .container .right .about {
-  margin-top: 4rem;
-  line-height: 1.5;
+  margin-top: 3rem;
+  line-height: 1.75;
 }
 
 .container .right .experience-list {
@@ -272,8 +270,7 @@ h3 {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: auto;
-  padding: 0 1rem 1rem 1rem;
-  font-family: "Lato", sans-serif;
+  padding: 0 1.5rem .5rem 1.5rem;
   font-size: 1rem;
 }
 
@@ -322,7 +319,7 @@ h3 {
     min-height: 100%;
   }
   .container .left .infobox {
-    min-height: 94%;
+    min-height: 95%;
   }
   .container .left .infobox img {
     padding-top: 1rem;
@@ -336,10 +333,13 @@ h3 {
     padding: 0 1rem 0 1.5rem;
   }
   .container .left nav {
-    min-height: 6%;
+    min-height: 5%;
+  }
+  .container .left nav a:last-child {
+    padding-right: 1rem;
   }
   .container .right section {
-    padding: 0 .5rem .5rem .5rem;
+    padding: 0 .5rem 1rem .5rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -354,12 +354,11 @@ h3 {
         flex-basis: 80%;
     text-align: start;
   }
-  .container .right section h3 {
+  .container .right section h2 {
     -ms-flex-preferred-size: 20%;
         flex-basis: 20%;
     text-align: end;
-    padding-top: .25rem;
-    padding-right: .5rem;
+    padding-right: .75rem;
   }
   .container .right ul > li > i {
     padding-bottom: .25rem;
@@ -370,14 +369,14 @@ h3 {
   }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1024px) and (max-width: 1440px) {
   .container .right section {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     padding: 0 2rem 1rem 2rem;
   }
-  .container .right section h3 {
+  .container .right section h2 {
     -ms-flex-preferred-size: 15%;
         flex-basis: 15%;
     text-align: end;
