--- a/css/main.sass
+++ b/css/main.sass
@@ -35,6 +35,12 @@ h2
     font-size: 1rem
     font-weight: 500
 
+// Night mode styling
+.night-mode-primary
+    background: $night-mode-primary
+.night-mode-background
+    background: $night-mode-background
+
 
 // Container for split page
 .container
